--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -877,6 +877,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
@@ -1122,6 +1123,7 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
+        land_parcel_registry: "Cahier de tracabilité - Parcelles"
         manure_management_plan: "Cahier d’épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
@@ -1138,6 +1140,7 @@ fra:
         stocks: "Stocks"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
+        vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
     document_template:
       nature:
         activity_cost: "Coût de production par activité et intervention"
@@ -1154,6 +1157,7 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
+        land_parcel_registry: "Cahier de tracabilité - Parcelles"
         manure_management_plan: "Cahier d’épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
@@ -1170,6 +1174,7 @@ fra:
         stocks: "Stocks"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
+        vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
     easement:
       variety:
         acetal: "Acetal"
@@ -3363,6 +3368,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
@@ -4125,6 +4131,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
@@ -5134,6 +5141,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
@@ -5407,6 +5415,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
@@ -5471,6 +5480,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
