--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -300,9 +300,14 @@ arb:
       show: "ممارسة المحاسبة %{code}"
     backend/gaps:
       # show: "Perte ou profit N°%{number}"
-    backend/guide_analyses: #?
+    backend/guide_analyses:
+      # show: "Autocontroles par rapport au référentiels"
     backend/guide_indicator_data: #?
-    backend/guides: #?
+    backend/guides:
+      # edit: "Editer le référentiel\_: %{name}"
+      # index: "Référentiels-Guides"
+      # new: "Nouveau Référentiel-Guide"
+      # show: "Référentiel\_: %{name}"
     backend/help: #?
     backend/helps:
       # index: "Aide"
@@ -345,9 +350,12 @@ arb:
       # show: "Inventaire %{number}"
     backend/inventory_lines: #?
     backend/issues:
+      # abort: "Annuler"
+      # close: "Fermer"
       # edit: "Modifier l’incident\_: %{name} (%{nature})"
       # index: "Incidents"
       # new: "Nouvel incident"
+      # reopen: "Réouvrir"
       # show: "Incident %{name} (%{nature})"
     backend/journal_entries:
       edit: "تعديل السجل رقم %{number} من %{created_on}"
@@ -1296,6 +1304,7 @@ arb:
     # ground_appearance: "Aspect du sol"
     # group: "Groupe"
     # groups: "Groupes"
+    # guides: "Référentiels"
     # harvested_at: "Récolté le"
     help: "المساعدة"
     hint: "تلميح&nbsp;: %{value}"
