--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -831,6 +831,7 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
+        land_parcel_registry: "Cahier de tracabilité - Parcelles"
         manure_management_plan: "Cahier d’épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
@@ -847,6 +848,7 @@ fra:
         stocks: "Stocks"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
+        vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
     entity_link_natures:
       name: "Types de liens sociaux"
       attributes:
@@ -910,7 +912,7 @@ fra:
         wheat: "Blé"
         winter_straw_cereal: "Céréales à paille d'hiver"
     guide_natures:
-      # name: "Guide natures"
+      name: "Type de guides"
       items:
         # best_practices: "Best practices"
         # regulations: "Regulations"
@@ -1072,7 +1074,7 @@ fra:
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
-        # plant_per_area: "Plant per area"
+        plant_per_area: "pied par unité de surface"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         population: "Population"
         potassium_concentration: "Teneur en potassium"
