--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -947,6 +947,7 @@ jpn:
         # incoming_delivery_docket: "Bon de réception"
         # inventory: "Inventaire"
         # journal: "Journal"
+        # land_parcel_registry: "Cahier de tracabilité - Parcelles"
         # manure_management_plan: "Cahier d’épandage"
         # outgoing_deliveries_journal: "Journal de livraison"
         # outgoing_delivery_docket: "Bon de livraison"
@@ -963,6 +964,7 @@ jpn:
         # stocks: "Stocks"
         # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
+        # vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
       # name: "Types de document"
     entity_link_natures:
       attributes: #?
@@ -1021,6 +1023,7 @@ jpn:
       # name: "Typologie de culture (France)"
     guide_natures:
       items: #?
+      # name: "Type de guides"
     indicators:
       attributes:
         # choices: "Choix"
@@ -1198,6 +1201,7 @@ jpn:
         # nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         # phosphorus_concentration: "Teneur en phosphore"
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        # plant_per_area: "pied par unité de surface"
         # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         # population: "Population"
         # potassium_concentration: "Teneur en potassium"
