--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -83,6 +83,7 @@ eng:
     backend/calculators:
       # index: "Calculateurs"
     backend/calculators/nitrogen_inputs:
+      # edit: "Calcul des apports d’azote"
       # show: "Calcul des apports d’azote"
     backend/campaigns:
       edit: "Edit campaign\_: %{name}"
@@ -277,14 +278,15 @@ eng:
       new: "Open a new financial year"
       show: "Financial year %{code}"
     backend/gaps:
+      # index: "Pertes et profits"
       # show: "Perte ou profit N°%{number}"
     backend/guide_analyses:
-      # show: "Autocontroles par rapport au référentiels"
+      # show: "Analyse %{execution_number} du référentiel %{guide}"
     backend/guide_indicator_data: #?
     backend/guides:
-      # edit: "Editer le référentiel\_: %{name}"
-      # index: "Référentiels-Guides"
-      # new: "Nouveau Référentiel-Guide"
+      # edit: "Modifier le référentiel\_: %{name}"
+      # index: "Référentiels"
+      # new: "Nouveau référentiel"
       # show: "Référentiel\_: %{name}"
     backend/help:  #?
       index: "Help" #?
@@ -1303,7 +1305,7 @@ eng:
     menus:
       accountancy: "Accountancy"
       archives: "Archives"
-      # calculators_and_simulators: "Calculs et simulations"
+      # decision_making: "Aide à la décision"
       # documents: "GED"
       exchange: "Data exchanges"
       finances: "Finances"
