--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -648,7 +648,7 @@ fra:
     exportable: "Exportable"
     exportable_columns: "Colonnes exportables"
     expression: "Expression" #?
-    external: "Externe à l’exploitation"
+    external: "Externe"
     failed_attempts: "Tentatives de connexions échouées"
     family: "Famille"
     father: "Père"
