--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1349,29 +1349,20 @@ arb:
       # name: "Langues"
     nmp_methods:
       items: #?
-    nmp_poitou_charentes_abacus_1:
-      attributes: #?
-      choices: #?
-      items: #?
+    nmp_poitou_charentes_abacus_1:  #?
+ #?
     nmp_poitou_charentes_abacus_10:
       attributes: #?
       choices: #?
       items: #?
-    nmp_poitou_charentes_abacus_2:
-      attributes: #?
-      choices: #?
-      items: #?
-    nmp_poitou_charentes_abacus_3:
-      attributes: #?
-      choices: #?
-      items: #?
-    nmp_poitou_charentes_abacus_4:
-      attributes: #?
-      items: #?
-    nmp_poitou_charentes_abacus_5:
-      attributes: #?
-      choices: #?
-      items: #?
+    nmp_poitou_charentes_abacus_2:  #?
+ #?
+    nmp_poitou_charentes_abacus_3:  #?
+ #?
+    nmp_poitou_charentes_abacus_4:  #?
+ #?
+    nmp_poitou_charentes_abacus_5:  #?
+ #?
     nmp_poitou_charentes_abacus_6:
       attributes: #?
       choices: #?
@@ -1387,6 +1378,25 @@ arb:
         input_method: #?
       items: #?
     nmp_poitou_charentes_abacus_9:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_five:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_four:
+      attributes: #?
+      items: #?
+    nmp_poitou_charentes_abacus_one:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_three:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_two:
       attributes: #?
       choices: #?
       items: #?
