Removes SalesController#statistics action

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -590,7 +590,7 @@ fra:
       propose_and_invoice: "Facturer rapidement"
       refuse: "Devis refusé par le client"
       show: "Vente\_: %{number} pour %{client} - %{state}"
-      statistics: "Statistiques  de ventes"
+      statistics: "Statistiques  de ventes" #?
     backend/sequences:
       edit: "Modifier la séquence\_: %{name}"
       index: "Séquences"
