--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -642,7 +642,7 @@ fra:
     # events: "Events"
     # evolvable: "Evolvable"
     exclusive: "Exclusif"
-    # execution_number: "Execution number"
+    execution_number: "N° d’exécution"
     expiration_delay: "Délai d’expiration"
     expired_on: "Date d’expiration"
     exportable: "Exportable"
@@ -688,7 +688,7 @@ fra:
     gravity: "Gravité"
     group: "Groupe"
     groups: "Groupes"
-    # guide: "Guide"
+    guide: "Référentiel"
     harvest_year: "Année de récolte"
     has_downpayment: "A un acompte"
     # horizontal_rotation: "Horizontal rotation"
