--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -663,6 +663,7 @@ jpn:
     # establishment: "Établissement"
     # event: "Évènement"
     # exclusive: "Exclusif"
+    # execution_number: "N° d’exécution"
     # expiration_delay: "Délai d’expiration"
     # expired_on: "Date d’expiration"
     # exportable: "Exportable"
@@ -699,6 +700,7 @@ jpn:
     # gravity: "Gravité"
     # group: "Groupe"
     # groups: "Groupes"
+    # guide: "Référentiel"
     # harvest_year: "Année de récolte"
     # has_downpayment: "A un acompte"
     # iban: "IBAN"
