--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -78,6 +78,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -181,7 +182,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -288,6 +288,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -391,7 +392,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -498,6 +498,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -601,7 +602,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -943,6 +943,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -1046,7 +1047,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -1221,6 +1221,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -1324,7 +1325,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -1628,6 +1628,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -1731,7 +1732,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -1923,6 +1923,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -2026,7 +2027,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -2133,6 +2133,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -2236,7 +2237,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -2484,6 +2484,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -2587,7 +2588,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -2694,6 +2694,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -2797,7 +2798,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -2949,6 +2949,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -3052,7 +3053,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -3159,6 +3159,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -3262,7 +3263,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -3503,6 +3503,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -3606,7 +3607,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -3712,6 +3712,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -3815,7 +3816,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -3922,6 +3922,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -4025,7 +4026,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -4197,6 +4197,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -4300,7 +4301,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -4481,6 +4481,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -4584,7 +4585,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -4723,6 +4723,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -4826,7 +4827,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -4932,6 +4932,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -5035,7 +5036,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
@@ -5207,6 +5207,7 @@ fra:
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
         chemical_fertiliser: "Engrais chimique"
+        chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         clay_soil: "Terre d’argile lourde"
@@ -5310,7 +5311,6 @@ fra:
         quebon: "Quebon"
         reaper: "Moissonneuse-batteuse"
         recital: "Recital"
-        red_chesnut_soil: "Terres rouges à chataigniers"
         renan: "Renan"
         rubisko: "Rubisko"
         runal: "Runal"
