--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1960,6 +1960,7 @@ spa:
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertiliser: "Engrais chimique"
+        # chesnut_red_soil: "Terres rouges à chataigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d’argile lourde"
@@ -2063,7 +2064,6 @@ spa:
         # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
         # recital: "Recital"
-        # red_chesnut_soil: "Terres rouges à chataigniers"
         # renan: "Renan"
         # rubisko: "Rubisko"
         # runal: "Runal"
