--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1963,6 +1963,7 @@ arb:
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertiliser: "Engrais chimique"
+        # chesnut_red_soil: "Terres rouges à chataigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d’argile lourde"
@@ -2066,7 +2067,6 @@ arb:
         # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
         # recital: "Recital"
-        # red_chesnut_soil: "Terres rouges à chataigniers"
         # renan: "Renan"
         # rubisko: "Rubisko"
         # runal: "Runal"
