--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1062,6 +1062,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        # mass_area_yield: "Mass area yield"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -1071,6 +1072,7 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
+        # nitrogen_input_area_density: "Nitrogen input area density"
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -1552,12 +1554,12 @@ fra:
     nmp_poitou_charentes_abacus_two:
       # name: "Nmp poitou charentes abacus two"
       attributes:
+        # crop_yield: "Crop yield"
         # cultivation_variety: "Cultivation variety"
         # irrigated: "Irrigated"
         # maximum_available_water_capacity: "Maximum available water capacity"
         # minimum_available_water_capacity: "Minimum available water capacity"
         # soil_variety: "Soil variety"
-        # yield: "Yield"
       choices:
         # cultivation_variety: # Choices comes from nomenclature: varieties
         # soil_variety: # Choices comes from nomenclature: varieties
