--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -736,6 +736,7 @@ spa:
     # invoiced: "Facturée"
     # invoiced_on: "Facturée le"
     # invoices_count: "Nombre de factures"
+    # irrigated: "Irrigué"
     # issue: "Incident"
     # issues: "Incidents"
     # item_listing: "Nœud de l’extraction"
